# RE-storage-model

./: AGENTS.md  activeContext.md  analysis_report.md  analyze_excel_model.py  besstoload_investigation.md  implementation.md  implementation_spec.md  investigate_besstoload.py  model_architecture.md  pyproject.toml
.hypothesis/constants/: 0249f386227c8501  33c45cff9af0caf0  356161df506e85c6  417335d7402b19ca  4e33d360ad685292  5c3f5bc9eb61d7f5  69cee87e286e4976  6e2052d2a2d98a07  6e79cd1395a3ef42  72424b173ae0a458  756021026de240db  78fb707d10782b92  7b318d0af4c69dd0  82f193751353737f  99761d4efed6275f  acb6839b0949067e  b898c26839a319b2  bbee15e9167c5216  e0c45206ebc72ced  e1582d8ff3c651e0  e1b04822aab1b36d  e8a7651ff4fe4d65  ecc71d23164892ac  eea1128c45f50627  f114f3e562023a84
src/re_storage/: __init__.py
src/re_storage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/re_storage/aggregation/: __init__.py  annual.py  lifetime.py  monthly.py
src/re_storage/core/: __init__.py  exceptions.py  types.py
src/re_storage/financial/: __init__.py  debt.py  metrics.py  waterfall.py
src/re_storage/inputs/: __init__.py  loaders.py  (+1 more)
tests/: __init__.py  conftest.py
tests/data/: README.md
tests/integration/: __init__.py  test_full_pipeline.py
tests/regression/: __init__.py  test_excel_comparison.py
tests/unit/: test_aggregation_annual.py  test_aggregation_lifetime.py  test_aggregation_monthly.py  test_balance.py  test_battery.py  test_financial_debt.py  test_financial_metrics.py  test_financial_waterfall.py  test_inputs_loaders.py  test_inputs_schemas.py  test_settlement_dppa.py  test_settlement_grid.py  test_solar.py  test_validation_checks.py
(+9 files in other folders)
